--- a/data/authors.yml
+++ b/data/authors.yml
@@ -1,10 +1,11 @@
-roqqy:
-  name: "Roqqy Balboa"
-  job: Roq Boxer
-  nickname: roqqy
-  profile: "https://github.com/quarkiverse/quarkus-roq"
-  avatar: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/refs/heads/main/blog/public/images/iamroq.png"
+loic:
+  name: "Loïc Magnette"
+  job: Senior Software Engineer
+  nickname: Loïc
+  profile: "https://github.com/lomagnette"
+  avatar: "https://avatars.githubusercontent.com/u/6390187?v=4"
   bio: |
-    Quarkus is my go-to framework for making Java development not only faster but more fun. 
-    I’m driven by the mission to create high-performance, lightweight microservices that scale effortlessly in the cloud. 
-    With Quarkus, I can push Java to its limits, and nothing excites me more than exploring new ways to optimize and streamline applications with this amazing toolkit.
+    Loïc Magnette is a seasoned software developer with a strong background in consulting. 
+    Currently a senior developer at Oniryx, he specializes in Java and Angular, delivering innovative solutions and sharing his knowledge as a speaker. 
+    As a co-organizer of the Belgian Java User Group (BeJUG), he fosters connections within the developer community. 
+    Outside of tech, Loïc’s passion for wildlife inspires his work and creativity.
