Add new talk entry to Thessaloniki 2025 talks data

--- a/data/talks.yml
+++ b/data/talks.yml
@@ -37,6 +37,7 @@
       location: "Thessaloniki, Greece"
       talks:
         - title: "The Future of Angular: Faster, Lighter, Stronger"
+        - title: "Mentorship / Discussion about personal branding and Public Speaking"
 
     - name: "JavaCro 25"
       date: "Oct 2025"
