--- a/data/talks.yml
+++ b/data/talks.yml
@@ -1,24 +1,28 @@
 - year: "2026"
   events:
     - name: "Voxxed Days Zurich"
+      url: "https://zurich.voxxeddays.com/"
       date: "Mar 2026"
       location: "Zürich, Switzerland"
       talks:
         - title: "Finding the Spark: A Career Reset Button."
 
     - name: "Javaland"
+      url: "https://www.javaland.eu/en/home/"
       date: "Mar 2026"
       location: "Rust, Germany"
       talks:
         - title: "AI-Powered Form Wizards: Chat, Click, Done"
 
     - name: "Voxxed Days Ticino"
+      url: "https://ticino.voxxeddays.com/"
       date: "Feb 2026"
       location: "Lugano, Switzerland"
       talks:
         - title: "The Future of Angular: Faster, Lighter, Stronger"
 
     - name: "Quarkus Insight"
+      url: "https://quarkus.io/insights/"
       date: "Jan 2026"
       location: "Online"
       talks:
@@ -27,6 +31,7 @@
 - year: "2025"
   events:
     - name: "DevDay"
+      url: "https://devday.be/"
       date: "Nov 2025"
       location: "Mons, Belgium"
       talks:
@@ -34,6 +39,7 @@
           slides: https://speakerdeck.com/magnette/le-futur-dangular-au-dela-de-ngzone
 
     - name: "Voxxed Days Thessaloniki"
+      url: "https://voxxeddays.com/thessaloniki/"
       date: "Nov 2025"
       location: "Thessaloniki, Greece"
       talks:
@@ -43,6 +49,7 @@
         - title: "Mentorship / Discussion about personal branding and Public Speaking"
 
     - name: "JavaCro 25"
+      url: "https://2025.javacro.hr/eng/"
       date: "Oct 2025"
       location: "Croatia"
       talks:
@@ -51,6 +58,7 @@
         - title: "Opening Roundtable: Software Development in the Age of AI"
 
     - name: "Devoxx Belgium"
+      url: "https://devoxx.be/"
       date: "Oct 2025"
       location: "Antwerpen, Belgium"
       talks:
@@ -63,6 +71,7 @@
           recording: https://www.youtube.com/watch?v=f_5b_qanhzg
 
     - name: "Dev2Next"
+      url: "https://www.dev2next.com"
       date: "Sep 2025"
       location: "USA, Colorado Springs"
       talks:
@@ -70,6 +79,7 @@
           slides: https://speakerdeck.com/magnette/dev2next-bridging-the-gap-full-stack-development-without-the-headaches
 
     - name: "Voxxed Days Luxembourg"
+      url: "https://luxembourg.voxxeddays.com/en/"
       date: "Jun 2025"
       location: "Mondorf-les-Bains, Grand-Duchy of Luxembourg"
       talks:
@@ -78,6 +88,7 @@
           recording: https://www.youtube.com/watch?v=8nIAR2aABlk&t=2s
 
     - name: "Devoxx Poland"
+      url: "https://devoxx.pl/"
       date: "Jun 2025"
       location: "Kraków, Poland"
       talks:
@@ -85,6 +96,7 @@
           slides: https://speakerdeck.com/magnette/the-future-of-angular-faster-lighter-stronger-78e8b7b7-101e-434b-86ac-86c22dc992f6
 
     - name: "MakeIT / JCON OpenBlend Slovenia"
+      url: "https://slovenia.jcon.one/en/"
       date: "May 2025"
       location: "Portorož, Slovenia"
       talks:
@@ -94,6 +106,7 @@
           slides: https://speakerdeck.com/magnette/bridging-the-gap-full-stack-development-without-the-headaches
 
     - name: "GeeCON"
+      url: "https://www.geecon.org/"
       date: "May 2025"
       location: "Kraków, Poland"
       talks:
@@ -101,6 +114,7 @@
           slides: https://speakerdeck.com/magnette/bridging-the-gap-full-stack-development-without-the-headaches
 
     - name: "JCON EUROPE"
+      url: "https://jcon.one/"
       date: "May 2025"
       location: "Köln, Germany"
       talks:
@@ -109,6 +123,7 @@
           recording: https://www.youtube.com/watch?v=z5m4ef_LtdQ
 
     - name: "Angular Dev France"
+      url: "https://angulardevs.fr/"
       date: "May 2025"
       location: "Online"
       talks:
@@ -117,6 +132,7 @@
           recording: https://www.youtube.com/watch?v=HKMPqYmugtg
 
     - name: "IA Data Day - Strasbourg"
+      url: "https://iadataday.capitale.dev/"
       date: "Apr 2025"
       location: "Strasbourg, France"
       talks:
@@ -124,6 +140,7 @@
           slides: https://speakerdeck.com/magnette/rag-to-the-future-comment-garder-son-ia-a-jour
 
     - name: "Devoxx Greece"
+      url: "https://devoxx.gr/"
       date: "Apr 2025"
       location: "Athens, Greece"
       talks:
@@ -132,6 +149,7 @@
           recording: https://www.youtube.com/watch?v=dwERF-hvPpk
 
     - name: "Warsaw IT Days"
+      url: "https://warszawskiedniinformatyki.pl/en/"
       date: "Apr 2025"
       location: "Warsaw, Poland"
       talks:
@@ -139,6 +157,7 @@
           slides: https://speakerdeck.com/magnette/bridging-the-gap-full-stack-development-without-the-headaches
 
     - name: "Web Day"
+      url: "https://www.webdayconf.it/"
       date: "Mar 2025"
       location: "Milan, Italy"
       talks:
@@ -146,6 +165,7 @@
           slides: https://speakerdeck.com/magnette/the-future-of-angular-faster-lighter-stronger
 
     - name: "Voxxed Days Zurich"
+      url: "https://zurich.voxxeddays.com/"
       date: "Mar 2025"
       location: "Zürich, Switzerland"
       talks:
@@ -154,6 +174,7 @@
           recording: https://www.youtube.com/watch?v=oMs4qcmbgRs&t=5s
 
     - name: "DevApp Podcast"
+      url: "https://devapps.ms/"
       date: "Jan 2025"
       location: "Online"
       talks:
@@ -161,6 +182,7 @@
           slides: https://speakerdeck.com/magnette/the-future-of-angular-faster-lighter-stronger
 
     - name: "Angular Dev France"
+      url: "https://angulardevs.fr/"
       date: "Jan 2025"
       location: "Online"
       talks:
@@ -171,6 +193,7 @@
 - year: "2024"
   events:
     - name: "DevFest Venezia"
+      url: "https://gdg.community.dev/gdg-venezia/"
       date: "Nov 2024"
       location: "Mestre, Italy"
       talks:
@@ -178,6 +201,7 @@
           slides: https://speakerdeck.com/magnette/a-developers-tale-migrating-an-angular-app-from-version-10-to-18-e301429f-e64e-4095-b473-5e064c589394
 
     - name: "DEVFEST Mons"
+      url: "https://gdg-mons.com/"
       date: "Nov 2024"
       location: "Mons, Belgium"
       talks:
@@ -186,6 +210,7 @@
           recording: https://www.youtube.com/watch?v=qtF_u2oZop0&t=2s
 
     - name: "DevDay"
+      url: "https://devday.be/"
       date: "Nov 2024"
       location: "Mons, Belgium"
       talks:
@@ -193,6 +218,7 @@
           slides: https://speakerdeck.com/magnette/angular-lepopee-moderne-decryptage-des-dernieres-avancees
 
     - name: "Devoxx Belgium"
+      url: "https://devoxx.be/"
       date: "Oct 2024"
       location: "Antwerpen, Belgium"
       talks:
@@ -204,6 +230,7 @@
           recording: https://www.youtube.com/watch?v=pT2dWsodUpQ
 
     - name: "RivieraDev"
+      url: "https://rivieradev.fr/"
       date: "July 2024"
       location: "Valbonne, France"
       talks:
@@ -213,6 +240,7 @@
           slides: https://speakerdeck.com/magnette/quarkus-supersonic-subatomic-full-stack-development-d225d160-4141-4047-998d-08ea29b7b64d
 
     - name: "Voxxed Days Luxembourg"
+      url: "https://luxembourg.voxxeddays.com/en/"
       date: "June 2024"
       location: "Mondorf-les-Bains, LU"
       talks:
@@ -221,6 +249,7 @@
           recording: https://www.youtube.com/watch?v=Asg0xHTiJzo
 
     - name: "Devoxx Poland"
+      url: "https://devoxx.pl/"
       date: "June 2024"
       location: "Kraków, Poland"
       talks:
@@ -228,6 +257,7 @@
           slides: https://speakerdeck.com/magnette/unleashing-the-power-of-angular-navigating-the-latest-releases-and-transformations
 
     - name: "DevFest Lille"
+      url: "https://devfest.gdglille.org/"
       date: "June 2024"
       location: "Lille, France"
       talks:
@@ -244,6 +274,7 @@
           recording: https://www.youtube.com/watch?v=Asg0xHTiJzo
 
     - name: "Devoxx UK"
+      url: "https://www.devoxx.co.uk/"
       date: "May 2024"
       location: "London, UK"
       talks:
@@ -252,6 +283,7 @@
           recording: https://www.youtube.com/watch?v=v2qZPQDR1qk
 
     - name: "Devoxx France"
+      url: "https://www.devoxx.fr/"
       date: "April 2024"
       location: "Paris, France"
       talks:
@@ -259,7 +291,8 @@
           slides: https://speakerdeck.com/magnette/au-coeur-de-lodyssee-migrer-une-application-dangular-10-a-17
           recording: https://www.youtube.com/watch?v=xhPYkBD6tng
 
-    - name: "Jfokus"
+    - name: "JFokus"
+      url: "https://www.jfokus.se/"
       date: "Feb 2024"
       location: "Stockholm, Sweden"
       talks:
@@ -270,12 +303,14 @@
 - year: "2023"
   events:
     - name: "Codeur en Seine"
+      url: "https://www.codeursenseine.com/"
       date: "Oct 2023"
       location: "Rouen, France"
       talks:
         - title: "Quarkus vs Spring Boot : Quel est le framework qui régnera en maître en 2023 ?"
 
     - name: "Devoxx Belgium"
+      url: "https://devoxx.be/"
       date: "Oct 2023"
       location: "Antwerpen, Belgium"
       talks:
@@ -288,6 +323,7 @@
         - title: "Quarkus vs Spring Boot: Which framework reigns supreme in 2023 ?"
 
     - name: "DevDay"
+      url: "https://devday.be/"
       date: "Mar 2023"
       location: "Mons, Belgium"
       talks:
