--- a/data/talks.yml
+++ b/data/talks.yml
@@ -17,7 +17,7 @@
         - title: "AI-Powered Form Wizards: Chat, Click, Done"
 
     - name: "BeJUG"
-      url: "https://zurich.voxxeddays.com/"
+      url: "https://bejug.github.io"
       date: "Feb 2026"
       location: "Leuven, Belgium"
       flag: "🇧🇪"
